<resources>
    <string name="app_name">GENS Mobile</string>
    <string name="avertissement_message">Le GPS est nécessaire pour faciliter vos campagnes</string>
    <string name="avertissement">Attention</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="accord">D\'accord</string>
    <string name="gps_requis_message">Le GPS est requis pour continuer. Voulez-vous l\'activer ?</string>
    <string name="plantae">Plantae</string>
    <string name="aves">Aves</string>
    <string name="amphibia">Amphibia</string>

    <!--Http activity-->
    <string name="givePssw">Veuillez insérez votre mot de passe pour continuer: </string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invToSync">inventaire(s) à synchroniser</string>
    <string name="protosToSync">protocole(s) à synchroniser</string>
    <string name="relToSync">relevé(s) de terrain</string>
    <string name="displayMdp">Afficher le mot de passe</string>
    <string name="noConnection">Aucune connexion à internet</string>
    <string name="mdpError">Mot de passe incorrect</string>
    <string name="updateApp">Votre version de l\'application est obsolète, veuillez la mettre à jour</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="valider">Valider</string>
    <string name="majUsr">Mettre à jour la liste d\'utilisateurs</string>
    <string name="error_incorrect_login">Login incorrect</string>
    <string name="error_field_required">Ce champ est requis pour continuer</string>
    <string name="wrongVersion">Mauvaise version</string>

    <!-- Strings pour la page home -->
    <string name="obs_ponct">Observation ponctuelle</string>
    <string name="protocole">Protocole de suivi</string>
    <string name="relevé">Outil de relevé de terrain</string>
    <string name="sync">Synchroniser / Exporter</string>
    <string name="chargement">Chargement de la carte &#8230;</string>
    <string name="syncInvs">Synchroniser les inventaires</string>
    <string name="syncsProtos">Synchroniser les protocoles</string>

    <!-- Boutons sur la map -->
    <string name="recenser">Recenser</string>
    <string name="finMission">Fin de mission</string>
    <string name="finReleve">Fin de relevé</string>
    <string name="mesCampagnes">Mes inventaires</string>
    <string name="reset">Réinitialiser</string>

    <!--Strings pour la MainActivityRel-->
    <string name="nommerReleve">Donnez un nom à votre relevé : </string>
    <string name="longueur">Longueur de la ligne : </string>
    <string name="perimetre">Périmètre du polygone : </string>
    <string name="confirmMessage">Votre relevé va se terminer. Êtes-vous sûr ?</string>
    <string name="mesReleves">Mes relevés</string>
    <string name="point">Point</string>
    <string name="line">Ligne</string>
    <string name="polygon">Polygone</string>
    <string name="positionWGS">Position du point en WGS84 :</string>
    <string name="positionL93">Position du point en L93 : </string>
    <string name="nommezReleve">Veuillez nommez votre relevé</string>
    <string name="polygonArea">Surface du polygone : </string>
    <string name="releveCanceled">Voulez vous vraiment arrêter votre relevé? Il ne sera pas sauvegardé</string>
    <!--Pour les pop up infos de releve-->
    <string name="popUpTitle">Informations sur le relevé</string>
    <string name="nom">Nom :</string>
    <string name="type">Type :</string>
    <string name="visualise">Visualiser</string>
    <string name="avertissementDelete">Êtes-vous sûr de vouloir supprimer ce relevé ?</string>

    <!-- Pour le layout qui s'affiche après appui sur bouton recenser -->
    <string name="layoutTitle">Recensement espèce</string>
    <string name="hintAutoCompleteLatin">Nom latin</string>
    <string name="hintAutoCompleteFr">Nom français</string>
    <string name="saisirTaxon">Veuillez choisir une espèce valide</string>

    <!-- Pour le layout formulaire -->
    <string name="formTitle">Formulaire recensement</string>
    <string name="nomLatin">Nom latin : </string>
    <string name="nomFr">Nom français : </string>
    <string name="heure">Heure : </string>
    <string name="date">Date : </string>
    <string name="nombre">Dénombrement : </string>
    <string name="modifier">Modifier</string>
    <string name="remarque">Remarque(s) :</string>
    <string name="validerForm">Valider le formulaire</string>
    <!-- Ces 4 espaces permettent aux editText contenant le dénombrement, le nbMale etc... d'avoir une taille minimale
    et de grandir en cas de dépassement de cette taille minimale-->
    <string name="empty_nombre_text">    </string>

    <!--Flore-->
    <string name="abondance">Indice d\'abondance : </string>
    <string-array name="indicesAbondance">
        <item>0: Non défini</item>
        <item>1: 1 à 25 pieds</item>
        <item>2: 26 à 100 pieds</item>
        <item>3: 101 à 1000 pieds</item>
        <item>4: 1001 à 10000 pieds</item>
        <item>5: plus de 10000 pieds</item>
    </string-array>
    <string name="incoherentDenombrement">Le dénombrement est incohérent avec l\'indice d\'abondance.</string>
    <!--Formulaire faune-->
    <string name="incoherantNbGenre">Le nombre de mâle et de femelle est incohérant</string>
    <string name="vu">Vu</string>
    <string name="entendu">Entendu</string>
    <string name="error_radio_button">Veuillez sélectionner un bouton</string>
    <string name="error_edit_nombre">0 est une valeur spéciale</string>
    <string name="ponte">Présence de ponte </string>
    <string name="male">Mâle</string>
    <string name="female">Femelle</string>
    <string name="activite">Activité : </string>
    <string name="statut">Statut : </string>
    <string name="nidification">Nidification : </string>
    <string-array name="activités">
        <item></item>
        <item>Accouplement</item>
        <item>Alimentation</item>
        <item>Chasse</item>
        <item>Couvaison</item>
        <item>En vol</item>
        <item>Nourissage</item>
        <item>Parade</item>
        <item>Ponte</item>
        <item>Poste de chant</item>
        <item>Repos</item>
        <item>Toilette</item>
        <item>Transport matériaux</item>
    </string-array>
    <string-array name="statuts">
        <item></item>
        <item>Hivernant</item>
        <item>Migrateur</item>
        <item>Nicheur</item>
    </string-array>
    <string-array name="nidification">
        <item></item>
        <item>Possible</item>
        <item>Probable</item>
        <item>Certaine</item>
    </string-array>
    <string name="emptyNidif">Veuillez choisir un statut de nidification</string>

    <!--Strings pour l'historique des relevés-->
    <string name="titleHistoryReleve">Historique des relevés</string>
    <string name="deleteSelection">Supprimer la sélection</string>
    <string name="exportSelection">Exporter la sélection</string>
    <string name="nameExportFile">Veuillez nommer le fichier gpx</string>
    <string name="sendMail">Envoyer par mail</string>
    <string name="avertissementDeleteSelection">Êtes-vous sûr de vouloir supprimer cette sélection?</string>

    <!--Historique recensement-->
    <string name="titleHistoryRecensement">Historique des inventaires</string>

    <!-- Barre notification pour le PointsTakerService -->
    <string name="notificationTitle">Localisation en cours</string>
    <string name="notificationMessage">Relevé de terrain en cours de traçage</string>
    <string name="notificationTicker">Gps activé pour continuer le relevé de terrain</string>

    <!--Protocoles-->
    <string name="chooseProto">Choix du protocole :</string>
    <string name="chooseSite">Choix du site :</string>
    <string name="nomRNF">RNF rhopalocères</string>
    <string name="chooseTransectTitle">Choix du transect</string>
    <string name="finRnf">Mettre fin au RNF</string>
    <string name="avertissementCancelRnf">Êtes-vous sûr de vouloir quitter le RNF ? Vos modifications actuelles ne seront pas enregistrées</string>
    <string name="avertissementCancelTransect">Êtes-vous sûr de vouloir abandonner ce transect ? Vos modifications actuelles ne seront pas enregistrées</string>
    <string name="avertissementValidationTransect">Êtes-vous sûr ? Ceci va afficher un récapitulatif des espèces actuellement recensées, vous ne pourrez alors plus en rajouter.</string>
    <string name="wrongDenombrementRNF">Le nombre d\'individu mâles femelles est supérieur au total</string>
    <string name="denombrementNotNoted">Vous devez saisir un total si vous saisissez un nombre de mâles ou de femelles</string>
    <string name="tempsParcours">Temps de parcours : </string>
    <string name="nomCampagne">Nom de la campagne : </string>
    <string name="validerTransect">Valider transect</string>
    <string name="mesSaisies">Mes saisies</string>

    <!--Historique des saisies-->
    <string name="titleHistorySaisies">Historique des saisies</string>
    <string name="syntheseSaisie">Synthèse de la saisie</string>
    <string name="proto">Protocole :</string>
    <string name="site">Site :</string>
    <string name="heureDebut">Heure début : </string>
    <string name="heureFin">Heure fin : </string>
    <string name="invs">Inventaires :</string>
    <string name="infoCampagne">Info de la campagne</string>

    <!-- Formulaire météo -->
    <string-array name="chooseVisibilite">
        <item></item>
        <item>Bonne</item>
        <item>Moyenne</item>
        <item>Mauvaise</item>
        <item>Nulle</item>
    </string-array>
    <string-array name="choosePrecipitation">
        <item></item>
        <item>Pas de précipitation</item>
        <item>Pluie continue</item>
        <item>Averse</item>
        <item>Grêle</item>
        <item>Neige</item>
        <item>Orage</item>
    </string-array>
    <string-array name="chooseNebulosite">
        <item></item>
        <item>Ciel bleu</item>
        <item>Ciel couvert</item>
        <item>Nuageux</item>
        <item>Orageux</item>
        <item>Brume</item>
        <item>Brouillard</item>
    </string-array>
    <string-array name="chooseDirectionVent">
        <item></item>
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
    </string-array>
    <string-array name="chooseVitesseVent">
        <item></item>
        <item>Nulle</item>
        <item>Faible</item>
        <item>Modérée</item>
        <item>Forte</item>
        <item>Rafales</item>
        <item>Tempêtes</item>
    </string-array>
    <string name="meteoTitle">Conditions météorologiques</string>
    <string name="celsius">°C</string>
    <string name="visibilite">Visibilité : </string>
    <string name="precipitation">Précipitation : </string>
    <string name="nebulosite">Nébulosité : </string>
    <string name="temperatureAir">Température air : </string>
    <string name="directionVent">Direction du vent : </string>
    <string name="vitesseVent">Vitesse du vent : </string>
</resources>
