<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ProtocoleActivities.RNF.FormMeteoActivity"
    android:background="@drawable/back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/meteoTitle"
        android:textSize="@dimen/formTitleTextSize"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintVertical_weight="1"
        android:layout_marginTop="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/formLayoutsMargin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visibilite"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/visibilite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/chooseVisibilite"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/formLayoutsMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precipitation"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/precipitation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/choosePrecipitation"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/formLayoutsMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nebulosite"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/nebulosite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/chooseNebulosite"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/formLayoutsMargin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperatureAir"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="@dimen/formNombreWidth"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/formLayoutsMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/directionVent"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/directionVent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/chooseDirectionVent"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/formLayoutsMargin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vitesseVent"
                    android:textSize="@dimen/formLabelTextSize"
                    android:textStyle="bold"/>

                <Spinner
                    android:id="@+id/vitesseVent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/chooseVitesseVent"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/validerMeteo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/valider"
        android:textAllCaps="false"/>

</LinearLayout>