<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity"
    android:background="@drawable/back">

    <LinearLayout
        android:id="@+id/buttonList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/obs_ponc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fond_bouton"
            android:drawableLeft="@drawable/jumelles"
            android:paddingLeft="15dp"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/obs_ponct"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/protocole_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protocole"
            android:layout_margin="@dimen/layout_margin"
            android:background="@drawable/fond_bouton"
            android:drawableLeft="@drawable/icone_formulaire"
            android:paddingLeft="10dp"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/releve_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fond_bouton"
            android:text="@string/relevé"
            android:layout_margin="@dimen/layout_margin"
            android:drawableLeft="@drawable/releve_icon"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/sync_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fond_bouton"
            android:drawableLeft="@drawable/sync_icon"
            android:layout_margin="@dimen/layout_margin"
            android:text="@string/sync"
            android:textAllCaps="false" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>