<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Historiques.Releves.NameExportFileActivity">
    <LinearLayout
        android:id="@+id/nameExportFileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameExportFile"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="@dimen/formLabelMargin"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/filePath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:layout_margin="@dimen/formLabelMargin"/>
        <EditText
            android:id="@+id/nomFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_margin="@dimen/formLabelMargin"/>
        <CheckBox
            android:id="@+id/senByMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/sendMail"/>
        <Button
            android:id="@+id/validerNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/valider"/>
    </LinearLayout>

</ScrollView>